updated for small mobiles

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Rakesh Soni | Home</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="hero.css" />
-    <link rel="stylesheet" href="hero-photo.css" />
-    <link rel="stylesheet" href="skills.css">
-    <link rel="stylesheet" href="projects.css">
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/hero.css" />
+    <link rel="stylesheet" href="./styles/hero-photo.css" />
+    <link rel="stylesheet" href="./styles/skills.css">
+    <link rel="stylesheet" href="./styles/projects.css">
   </head>
   <body>
     <!-- Navbar -->
