About page added and code updated

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Rakesh Soni | Home</title>
-    <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="./styles/hero.css" />
-    <link rel="stylesheet" href="./styles/hero-photo.css" />
-    <link rel="stylesheet" href="./styles/skills.css">
-    <link rel="stylesheet" href="./styles/projects.css">
+    <link rel="stylesheet" href="./styles/Home/style.css" />
+    <link rel="stylesheet" href="./styles/Home/hero.css" />
+    <link rel="stylesheet" href="./styles/Home/hero-photo.css" />
+    <link rel="stylesheet" href="./styles/Home/skills.css">
+    <link rel="stylesheet" href="./styles/Home/projects.css">
   </head>
   <body>
     <!-- Navbar -->
@@ -38,7 +38,7 @@
             <div class="brief-bio">I'm a UI/UX designer and Software developer, I started my journey by building a small Blog website design, in just a few short years, I love to build fast and efficient website, learning Algorithms and explore about new technologies.</div>
             <div class="end-of-era">
               <button class="download-btn"><span>Resume</span><img src="./icons/download.svg" alt="download"></button>
-              <a class="about-me" href="#"><span>About Me</span><img src="./icons/arrow.svg" alt="arrow"></a>
+              <a class="about-me" href="./about.html"><span>About Me</span><img src="./icons/arrow.svg" alt="arrow"></a>
             </div>
           </div>
           <div class="hero-part section-main">
@@ -263,6 +263,7 @@
       <div class="foot-content">Copyright @Rakesh Soni</div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="./scripts/script.js"></script>
+    <script src="./scripts/home.js"></script>
   </body>
 </html>
