--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Rakesh Soni | Home</title>
-    <link rel="stylesheet" href="./styles/Home/style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/About-Us/about.css" />
     <link rel="stylesheet" href="./styles/About-Us/achieve.css" />
     <link rel="stylesheet" href="./styles/About-Us/experience.css" />
@@ -16,9 +16,9 @@
           <span>Rakesh Soni</span>
         </div>
         <div class="links">
-          <div><a class="nav-link link-active" href="/">Home</a></div>
-          <div><a class="nav-link" href="#">Skills</a></div>
-          <div><a class="nav-link" href="#">Projects</a></div>
+          <div><a class="nav-link" href="/">Home</a></div>
+          <div><a class="nav-link" href="./skills.html">Skills</a></div>
+          <div><a class="nav-link" href="./projects.html">Projects</a></div>
           <div><a class="nav-button" href="#">Contact Me</a></div>
         </div>
         <div class="hams"><img src="./icons/hams.svg" /></div>
