--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Rakesh Soni | Home</title>
-    <link rel="stylesheet" href="./styles/Home/style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/Home/hero.css" />
     <link rel="stylesheet" href="./styles/Home/hero-photo.css" />
     <link rel="stylesheet" href="./styles/Home/skills.css">
@@ -18,8 +18,8 @@
         </div>
         <div class="links">
           <div><a class="nav-link link-active" href="#">Home</a></div>
-          <div><a class="nav-link" href="#">Skills</a></div>
-          <div><a class="nav-link" href="#">Projects</a></div>
+          <div><a class="nav-link" href="./skills.html">Skills</a></div>
+          <div><a class="nav-link" href="./projects.html">Projects</a></div>
           <div><a class="nav-button" href="#">Contact Me</a></div>
         </div>
         <div class="hams"><img src="./icons/hams.svg" /></div>
@@ -45,16 +45,16 @@
             <div class="container" style="--m: 4; --tan: 1">
               <div class="follow-me">Follow me on:</div>
               <div style="--i: 3" href="/facebook">
-                <a href="#"><img src="./icons/facebook.svg" alt="Facebook" /></a>
+                <a href="https://www.facebook.com/profile.php?id=100026666043078"><img src="./icons/facebook.svg" alt="Facebook" /></a>
               </div>
               <div style="--i: 2" href="/instagram">
-                <a href="#"><img src="./icons/instagram.svg" alt="instagram" /></a>
+                <a href="https://www.instagram.com/rakeshsoni6373/"><img src="./icons/instagram.svg" alt="instagram" /></a>
               </div>
               <div style="--i: 1" href="/linkedin">
-                <a href="#"><img src="./icons/linkedIn.svg" alt="linkedin" /></a>
+                <a href="https://www.linkedin.com/in/rakesh-soni-087b99200/"><img src="./icons/linkedIn.svg" alt="linkedin" /></a>
               </div>
               <div style="--i: 4" href="/twitter">
-                <a href="#"><img src="./icons/twitter.svg" alt="twitter" /></a>
+                <a href="https://twitter.com/RakeshS60960300"><img src="./icons/twitter.svg" alt="twitter" /></a>
               </div>
             </div>
             <div class="my-img">
