--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
             </div>
             <div class="project-tech">
               <div>Technology</div>
-              <div>Figma</div>
+              <div>Design</div>
             </div>
           </a>
           <a class="project-card" href="#">
