--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
     <div class="rest-code-to-indent">
       <!-- Project Section -->
       <section class="project-section">
-        <h2>My skills</h2>
+        <h2>My Projects</h2>
         <div class="projects-wrapper">
           <a class="project-card" href="#">
             <div class="project-cat-img">
