--- a/skills.html
+++ b/skills.html
@@ -27,7 +27,7 @@
     <div class="rest-code-to-indent">
       <!-- Skills Section-->
       <section class="skills-representation">
-        <h2>My skills</h2>
+        <h2>My Skills</h2>
         <div class="skills-wrapper">
           <div class="skills-card">
             <div class="percent" style="--clr:#F7DF1E; --angle:90">
