--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Rakesh Soni | Home</title>
-    <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="./styles/Home/hero.css" />
-    <link rel="stylesheet" href="./styles/Home/hero-photo.css" />
-    <link rel="stylesheet" href="./styles/Home/skills.css">
-    <link rel="stylesheet" href="./styles/Home/projects.css">
+    <link rel="stylesheet" href="./static/styles/style.css" />
+    <link rel="stylesheet" href="./static/styles/Home/hero.css" />
+    <link rel="stylesheet" href="./static/styles/Home/hero-photo.css" />
+    <link rel="stylesheet" href="./static/styles/Home/skills.css">
+    <link rel="stylesheet" href="./static/styles/Home/projects.css">
   </head>
   <body>
     <!-- Navbar -->
@@ -18,12 +18,12 @@
         </div>
         <div class="links">
           <div><a class="nav-link link-active" href="#">Home</a></div>
-          <div><a class="nav-link" href="./skills.html">Skills</a></div>
-          <div><a class="nav-link" href="./projects.html">Projects</a></div>
+          <div><a class="nav-link" href="./template/skills.html">Skills</a></div>
+          <div><a class="nav-link" href="./template/projects.html">Projects</a></div>
           <div><a class="nav-button" href="#">Contact Me</a></div>
         </div>
-        <div class="hams"><img src="./icons/hams.svg" /></div>
-        <div class="close"><img src="./icons/close.svg" /></div>
+        <div class="hams"><img src="./static/icons/hams.svg" /></div>
+        <div class="close"><img src="./static/icons/close.svg" /></div>
       </nav>
     </header>
 
@@ -37,28 +37,28 @@
             <div class="specifications">Designer & Developer</div>
             <div class="brief-bio">I'm a UI/UX designer and Software developer, I started my journey by building a small Blog website design, in just a few short years, I love to build fast and efficient website, learning Algorithms and explore about new technologies.</div>
             <div class="end-of-era">
-              <button class="download-btn"><span>Resume</span><img src="./icons/download.svg" alt="download"></button>
-              <a class="about-me" href="./about.html"><span>About Me</span><img src="./icons/arrow.svg" alt="arrow"></a>
+              <button class="download-btn"><span>Resume</span><img src="./static/icons/download.svg" alt="download"></button>
+              <a class="about-me" href="./template/about.html"><span>About Me</span><img src="./static/icons/arrow.svg" alt="arrow"></a>
             </div>
           </div>
           <div class="hero-part section-main">
             <div class="container" style="--m: 4; --tan: 1">
               <div class="follow-me">Follow me on:</div>
               <div style="--i: 3" href="/facebook">
-                <a href="https://www.facebook.com/profile.php?id=100026666043078"><img src="./icons/facebook.svg" alt="Facebook" /></a>
+                <a href="https://www.facebook.com/profile.php?id=100026666043078"><img src="./static/icons/facebook.svg" alt="Facebook" /></a>
               </div>
               <div style="--i: 2" href="/instagram">
-                <a href="https://www.instagram.com/rakeshsoni6373/"><img src="./icons/instagram.svg" alt="instagram" /></a>
+                <a href="https://www.instagram.com/rakeshsoni6373/"><img src="./static/icons/instagram.svg" alt="instagram" /></a>
               </div>
               <div style="--i: 1" href="/linkedin">
-                <a href="https://www.linkedin.com/in/rakesh-soni-087b99200/"><img src="./icons/linkedIn.svg" alt="linkedin" /></a>
+                <a href="https://www.linkedin.com/in/rakesh-soni-087b99200/"><img src="./static/icons/linkedIn.svg" alt="linkedin" /></a>
               </div>
               <div style="--i: 4" href="/twitter">
-                <a href="https://twitter.com/RakeshS60960300"><img src="./icons/twitter.svg" alt="twitter" /></a>
+                <a href="https://twitter.com/RakeshS60960300"><img src="./static/icons/twitter.svg" alt="twitter" /></a>
               </div>
             </div>
             <div class="my-img">
-              <img src="./icons/rakesh.svg" alt="Rakesh Soni">
+              <img src="./static/icons/rakesh.svg" alt="Rakesh Soni">
             </div>
             <div class="background-circle">
               <div class="circle--1"></div>
@@ -66,26 +66,26 @@
             </div>
             <div class="card-container">
               <div class="top-card">
-                <img class="need-to-hide" src="./icons/shine-darkBlue-1.svg" alt="blue-stars">
+                <img class="need-to-hide" src="./static/icons/shine-darkBlue-1.svg" alt="blue-stars">
                 <a href="/web-dev-card" class="cardings-style">
-                  <div><img src="./icons/webdev.svg" alt="Web-development"></div>
+                  <div><img src="./static/icons/webdev.svg" alt="Web-development"></div>
                   <div class="card-details">
                     <div class="card-heading">Web Development</div>
                     <div class="card-content">New Project is on the way, stay tuned...</div>
                   </div>
                 </a>
-                <img src="./icons/shine-green.svg" alt="green-stars">
+                <img src="./static/icons/shine-green.svg" alt="green-stars">
               </div>
               <div class="bottom-card">
-                <img src="./icons/shine-blue.svg" alt="blue-stars">
+                <img src="./static/icons/shine-blue.svg" alt="blue-stars">
                 <a href="/ui-ux-card" class="cardings-style">
-                  <div><img src="./icons/ui-ux.svg" alt="UI-UX"></div>
+                  <div><img src="./static/icons/ui-ux.svg" alt="UI-UX"></div>
                   <div class="card-details">
                     <div class="card-heading">UI / UX</div>
                     <div class="card-content">Check my new design of an e-commerce store.</div>
                   </div>
                 </a>
-                <img class="need-to-hide" src="./icons/shine-darkBlue-2.svg" alt="green-stars">
+                <img class="need-to-hide" src="./static/icons/shine-darkBlue-2.svg" alt="green-stars">
               </div>
             </div>
           </div>
@@ -98,43 +98,43 @@
         <p>I am having an efficient knowledge over these languages and have build many projects over these.</p>
         <div class="skill-container">
           <div class="skill-card" style="--color: #00D8FF">
-            <div class="skil-img"><img src="./icons/React-js.svg" alt="React-JS"></div>
+            <div class="skil-img"><img src="./static/icons/React-js.svg" alt="React-JS"></div>
             <div class="skil-name">React JS</div>
           </div>
           <div class="skill-card" style="--color: #3875A8">
-            <div class="skil-img"><img src="./icons/python.svg" alt="Python"></div>
+            <div class="skil-img"><img src="./static/icons/python.svg" alt="Python"></div>
             <div class="skil-name">Python</div>
           </div>
           <div class="skill-card" style="--color: #F24E1E">
-            <div class="skil-img"><img src="./icons/html.svg" alt="HTML"></div>
+            <div class="skil-img"><img src="./static/icons/html.svg" alt="HTML"></div>
             <div class="skil-name">HTML</div>
           </div>
           <div class="skill-card" style="--color: #F7DF1E">
-            <div class="skil-img"><img src="./icons/javascript.svg" alt="javascript"></div>
+            <div class="skil-img"><img src="./static/icons/javascript.svg" alt="javascript"></div>
             <div class="skil-name">Javascript</div>
           </div>
           <div class="skill-card" style="--color: #F24E1E">
-            <div class="skil-img"><img src="./icons/css.svg" alt="Css"></div>
+            <div class="skil-img"><img src="./static/icons/css.svg" alt="Css"></div>
             <div class="skil-name">CSS</div>
           </div>
           <div class="skill-card" style="--color: #333">
-            <div class="skil-img"><img src="./icons/UX.svg" alt="UI-UX"></div>
+            <div class="skil-img"><img src="./static/icons/UX.svg" alt="UI-UX"></div>
             <div class="skil-name">UI-UX</div>
           </div>
           <div class="skill-card" style="--color: #5AA845">
-            <div class="skil-img"><img src="./icons/nodejs.svg" alt="Node JS"></div>
+            <div class="skil-img"><img src="./static/icons/nodejs.svg" alt="Node JS"></div>
             <div class="skil-name">Node JS</div>
           </div>
           <div class="skill-card" style="--color: #00758F">
-            <div class="skil-img"><img src="./icons/mysql.svg" alt="MYsql"></div>
+            <div class="skil-img"><img src="./static/icons/mysql.svg" alt="MYsql"></div>
             <div class="skil-name">MySQL</div>
           </div>
           <div class="skill-card" style="--color: #F24E1E">
-            <div class="skil-img"><img src="./icons/cpp.svg" alt="C++"></div>
+            <div class="skil-img"><img src="./static/icons/cpp.svg" alt="C++"></div>
             <div class="skil-name">C++</div>
           </div>
           <div class="skill-card" style="--color: #439945">
-            <div class="skil-img"><img src="./icons/mongodb.svg" alt="MongoDB"></div>
+            <div class="skil-img"><img src="./static/icons/mongodb.svg" alt="MongoDB"></div>
             <div class="skil-name">Mongo DB</div>
           </div>
         </div>
@@ -152,13 +152,13 @@
         </nav>
         <div class="project-container">
           <div class="project-card">
-            <div class="project-img"><img src="./imgs/project-1.jpg" alt="Web Development"></div>
+            <div class="project-img"><img src="./static/imgs/project-1.jpg" alt="Web Development"></div>
             <div class="project-category">Web Development</div>
             <div class="project-description">E-commerce site, for users only to view and cart items and make an order.</div>
             <div class="project-completion">
               <div class="complete-status">
                 <span class="done">Completed</span>
-                <span><img src="./icons/check-comp.svg" alt="Check"></span>
+                <span><img src="./static/icons/check-comp.svg" alt="Check"></span>
               </div>
               <div class="date-comp">21/06/2022</div>
             </div>
@@ -169,13 +169,13 @@
             </div>
           </div>
           <div class="project-card">
-            <div class="project-img"><img src="./imgs/project-2.jpg" alt="UI-UX Design"></div>
+            <div class="project-img"><img src="./static/imgs/project-2.jpg" alt="UI-UX Design"></div>
             <div class="project-category">UI/UX Design</div>
             <div class="project-description">A Delivery service website just as DTDC and Delhivery to process the orders.</div>
             <div class="project-completion">
               <div class="complete-status">
                 <span class="run">Running</span>
-                <span><img src="./icons/check.svg" alt="Check"></span>
+                <span><img src="./static/icons/check.svg" alt="Check"></span>
               </div>
               <div class="date-comp">12/05/2022</div>
             </div>
@@ -186,13 +186,13 @@
             </div>
           </div>
           <div class="project-card">
-            <div class="project-img"><img src="./imgs/project-3.jpg" alt="Algorithm Visualisor"></div>
+            <div class="project-img"><img src="./static/imgs/project-3.jpg" alt="Algorithm Visualisor"></div>
             <div class="project-category">N-Queens Problem</div>
             <div class="project-description">Backtracking algorithm based question N-Queen Problem solution visualiazor.</div>
             <div class="project-completion">
               <div class="complete-status">
                 <span class="done">Completed</span>
-                <span><img src="./icons/check-comp.svg" alt="Check"></span>
+                <span><img src="./static/icons/check-comp.svg" alt="Check"></span>
               </div>
               <div class="date-comp">05/04/2022</div>
             </div>
@@ -203,13 +203,13 @@
             </div>
           </div>
           <div class="project-card">
-            <div class="project-img"><img src="./imgs/project-4.jpg" alt="Research Paper"></div>
+            <div class="project-img"><img src="./static/imgs/project-4.jpg" alt="Research Paper"></div>
             <div class="project-category">Reasearch Paper</div>
             <div class="project-description">How Quatum tunnel can procurred based on the heavy metal movement with high velocity.</div>
             <div class="project-completion">
               <div class="complete-status">
                 <span class="run">Running</span>
-                <span><img src="./icons/check.svg" alt="Check"></span>
+                <span><img src="./static/icons/check.svg" alt="Check"></span>
               </div>
               <div class="date-comp">12/12/2021</div>
             </div>
@@ -220,13 +220,13 @@
             </div>
           </div>
           <div class="project-card">
-            <div class="project-img"><img src="./imgs/project-5.jpg" alt="Meta-verse"></div>
+            <div class="project-img"><img src="./static/imgs/project-5.jpg" alt="Meta-verse"></div>
             <div class="project-category">Metaverse</div>
             <div class="project-description">Small project to showcase the items of a shopping-mall in VR in a realistic way.</div>
             <div class="project-completion">
               <div class="complete-status">
                 <span class="done">Completed</span>
-                <span><img src="./icons/check-comp.svg" alt="Check"></span>
+                <span><img src="./static/icons/check-comp.svg" alt="Check"></span>
               </div>
               <div class="date-comp">09/08/2021</div>
             </div>
@@ -237,13 +237,13 @@
             </div>
           </div>
           <div class="project-card">
-            <div class="project-img"><img src="./imgs/project-6.jpg" alt="Web Devlopment"></div>
+            <div class="project-img"><img src="./static/imgs/project-6.jpg" alt="Web Devlopment"></div>
             <div class="project-category">Web Development</div>
             <div class="project-description">A blog website to share and express your thought with more flexibility to the world.</div>
             <div class="project-completion">
               <div class="complete-status">
                 <span>Completed</span>
-                <span><img src="./icons/check-comp.svg" alt="Check"></span>
+                <span><img src="./static/icons/check-comp.svg" alt="Check"></span>
               </div>
               <div class="date-comp">21/04/2022</div>
             </div>
@@ -263,7 +263,7 @@
       <div class="foot-content">Copyright @Rakesh Soni</div>
     </footer>
 
-    <script src="./scripts/script.js"></script>
-    <script src="./scripts/home.js"></script>
+    <script src="./static/scripts/script.js"></script>
+    <script src="./static/scripts/home.js"></script>
   </body>
 </html>
