Actual Data importing

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="rest-code-to-indent">
       <!-- Hero Section -->
-      <section class="hero-section">
+      <section class="hero-section">  
         <div class="hero-container">
           <div class="hero-part">
             <div class="salutation">Hello! I am</div>
@@ -152,77 +152,77 @@
         </nav>
         <div class="project-container">
           <div class="project-card">
-            <div class="project-img"><img src="./static/imgs/project-1.jpg" alt="Web Development"></div>
-            <div class="project-category">Web Development</div>
-            <div class="project-description">E-commerce site, for users only to view and cart items and make an order.</div>
-            <div class="project-completion">
-              <div class="complete-status">
-                <span class="done">Completed</span>
-                <span><img src="./static/icons/check-comp.svg" alt="Check"></span>
-              </div>
-              <div class="date-comp">21/06/2022</div>
-            </div>
-            <div class="card-overlay hidden"></div>
-            <div class="hover-show-wrapper hidden">
-              <div class="Project-stack">MERN</div>
-              <div class="view-demo"><a href="#">View Demo</a></div>
-            </div>
-          </div>
-          <div class="project-card">
-            <div class="project-img"><img src="./static/imgs/project-2.jpg" alt="UI-UX Design"></div>
+            <div class="project-img"><img src="./static/imgs/bazarpur.jpg" alt="UI/UX Design"></div>
             <div class="project-category">UI/UX Design</div>
-            <div class="project-description">A Delivery service website just as DTDC and Delhivery to process the orders.</div>
+            <div class="project-description">A hyper-local e-commerce business model based website to represent local market virtually.</div>
             <div class="project-completion">
               <div class="complete-status">
                 <span class="run">Running</span>
                 <span><img src="./static/icons/check.svg" alt="Check"></span>
               </div>
-              <div class="date-comp">12/05/2022</div>
+              <div class="date-comp">13/03/2021</div>
             </div>
             <div class="card-overlay hidden"></div>
             <div class="hover-show-wrapper hidden">
               <div class="Project-stack">Design</div>
-              <div class="view-demo"><a href="#">View Demo</a></div>
+              <div class="view-demo"><a href="https://www.figma.com/proto/6sQm9W9ZTCg1Ul1NnZihCV/Bazarpur-Services?page-id=0%3A1&node-id=4%3A68&starting-point-node-id=4%3A68&scaling=scale-down">View Demo</a></div>
             </div>
           </div>
           <div class="project-card">
-            <div class="project-img"><img src="./static/imgs/project-3.jpg" alt="Algorithm Visualisor"></div>
-            <div class="project-category">N-Queens Problem</div>
-            <div class="project-description">Backtracking algorithm based question N-Queen Problem solution visualiazor.</div>
-            <div class="project-completion">
-              <div class="complete-status">
-                <span class="done">Completed</span>
-                <span><img src="./static/icons/check-comp.svg" alt="Check"></span>
-              </div>
-              <div class="date-comp">05/04/2022</div>
-            </div>
-            <div class="card-overlay hidden"></div>
-            <div class="hover-show-wrapper hidden">
-              <div class="Project-stack">Backtracking</div>
-              <div class="view-demo"><a href="#">View Demo</a></div>
-            </div>
-          </div>
-          <div class="project-card">
-            <div class="project-img"><img src="./static/imgs/project-4.jpg" alt="Research Paper"></div>
-            <div class="project-category">Reasearch Paper</div>
-            <div class="project-description">How Quatum tunnel can procurred based on the heavy metal movement with high velocity.</div>
+            <div class="project-img"><img src="./static/imgs/waymore.jpg" alt="Web Development"></div>
+            <div class="project-category">Web Development</div>
+            <div class="project-description">A Beautiful website for content creators and daily readers to deliver thoughts among each other.</div>
             <div class="project-completion">
               <div class="complete-status">
                 <span class="run">Running</span>
                 <span><img src="./static/icons/check.svg" alt="Check"></span>
               </div>
-              <div class="date-comp">12/12/2021</div>
+              <div class="date-comp">09/12/2021</div>
             </div>
             <div class="card-overlay hidden"></div>
             <div class="hover-show-wrapper hidden">
-              <div class="Project-stack">Quantum_Mech</div>
-              <div class="view-demo"><a href="#">View Demo</a></div>
+              <div class="Project-stack">MERN</div>
+              <div class="view-demo"><a href="https://github.com/Rakeshsoni7296/Waymore.git">View Demo</a></div>
             </div>
           </div>
           <div class="project-card">
-            <div class="project-img"><img src="./static/imgs/project-5.jpg" alt="Meta-verse"></div>
-            <div class="project-category">Metaverse</div>
-            <div class="project-description">Small project to showcase the items of a shopping-mall in VR in a realistic way.</div>
+            <div class="project-img"><img src="./static/imgs/career-path.jpg" alt="UI/UX Design"></div>
+            <div class="project-category">UI/UX Design</div>
+            <div class="project-description">A platform to deliver knowledge volunteerly to the deserving students who can't afford paid courses.</div>
+            <div class="project-completion">
+              <div class="complete-status">
+                <span class="done">Completed</span>
+                <span><img src="./static/icons/check-comp.svg" alt="Check"></span>
+              </div>
+              <div class="date-comp">13/02/2022</div>
+            </div>
+            <div class="card-overlay hidden"></div>
+            <div class="hover-show-wrapper hidden">
+              <div class="Project-stack">Design</div>
+              <div class="view-demo"><a href="https://www.figma.com/proto/8SLmhQhKEmUG1gEKBptE3u/GyanDaan-Project?page-id=0%3A1&node-id=21%3A111&starting-point-node-id=21%3A111&scaling=scale-down">View Demo</a></div>
+            </div>
+          </div>
+          <div class="project-card">
+            <div class="project-img"><img src="./static/imgs/uma.jpg" alt="UI/UX Design"></div>
+            <div class="project-category">UI/UX Design</div>
+            <div class="project-description">A platform to deliver goods between cities with facility of tracking status and logistics management.</div>
+            <div class="project-completion">
+              <div class="complete-status">
+                <span class="run">Running</span>
+                <span><img src="./static/icons/check.svg" alt="Check"></span>
+              </div>
+              <div class="date-comp">27/06/2021</div>
+            </div>
+            <div class="card-overlay hidden"></div>
+            <div class="hover-show-wrapper hidden">
+              <div class="Project-stack">Design</div>
+              <div class="view-demo"><a href="https://www.figma.com/proto/OV8wBlCiFR8bnFy8RgiZnw/Untitled?page-id=0%3A1&node-id=17%3A0">View Demo</a></div>
+            </div>
+          </div>
+          <div class="project-card">
+            <div class="project-img"><img src="./static/imgs/mapty.jpg" alt="Web Development"></div>
+            <div class="project-category">Web Development</div>
+            <div class="project-description">A map view to store yours daily cycling/running activity to check daily calories burn progress.</div>
             <div class="project-completion">
               <div class="complete-status">
                 <span class="done">Completed</span>
@@ -232,25 +232,25 @@
             </div>
             <div class="card-overlay hidden"></div>
             <div class="hover-show-wrapper hidden">
-              <div class="Project-stack">AR/VR</div>
-              <div class="view-demo"><a href="#">View Demo</a></div>
+              <div class="Project-stack">Javascript</div>
+              <div class="view-demo"><a href="https://mapty.netlify.app/">View Demo</a></div>
             </div>
           </div>
           <div class="project-card">
-            <div class="project-img"><img src="./static/imgs/project-6.jpg" alt="Web Devlopment"></div>
-            <div class="project-category">Web Development</div>
-            <div class="project-description">A blog website to share and express your thought with more flexibility to the world.</div>
+            <div class="project-img"><img src="./static/imgs/waymore-old.JPG" alt="UI/UX Design"></div>
+            <div class="project-category">UI/UX Design</div>
+            <div class="project-description">A platform to engage people to learn, read and write for having an excitement in their busy life.</div>
             <div class="project-completion">
               <div class="complete-status">
                 <span>Completed</span>
                 <span><img src="./static/icons/check-comp.svg" alt="Check"></span>
               </div>
-              <div class="date-comp">21/04/2022</div>
+              <div class="date-comp">17/09/2021</div>
             </div>
             <div class="card-overlay hidden"></div>
             <div class="hover-show-wrapper hidden">
-              <div class="Project-stack">MERN</div>
-              <div class="view-demo"><a href="#">View Demo</a></div>
+              <div class="Project-stack">Design</div>
+              <div class="view-demo"><a href="https://www.figma.com/proto/DGMstxtkzYjIHdSkg4EmDB/Way-More?page-id=0%3A1&node-id=5%3A272&starting-point-node-id=5%3A272">View Demo</a></div>
             </div>
           </div>
         </div>
