--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <div class="card-overlay hidden"></div>
             <div class="hover-show-wrapper hidden">
               <div class="Project-stack">Design</div>
-              <div class="view-demo"><a href="https://www.figma.com/proto/6sQm9W9ZTCg1Ul1NnZihCV/Bazarpur-Services?page-id=0%3A1&node-id=4%3A68&starting-point-node-id=4%3A68&scaling=scale-down">View Demo</a></div>
+              <div class="view-demo"><a href="https://www.figma.com/proto/6sQm9W9ZTCg1Ul1NnZihCV/Bazarpur-Services?page-id=0%3A1&node-id=4%3A68&starting-point-node-id=4%3A68&scaling=scale-down" target="_blank">View Demo</a></div>
             </div>
           </div>
           <div class="project-card">
@@ -182,7 +182,7 @@
             <div class="card-overlay hidden"></div>
             <div class="hover-show-wrapper hidden">
               <div class="Project-stack">MERN</div>
-              <div class="view-demo"><a href="https://github.com/Rakeshsoni7296/Waymore.git">View Demo</a></div>
+              <div class="view-demo"><a href="https://github.com/Rakeshsoni7296/Waymore.git" target="_blank">View Demo</a></div>
             </div>
           </div>
           <div class="project-card">
@@ -199,7 +199,7 @@
             <div class="card-overlay hidden"></div>
             <div class="hover-show-wrapper hidden">
               <div class="Project-stack">Design</div>
-              <div class="view-demo"><a href="https://www.figma.com/proto/8SLmhQhKEmUG1gEKBptE3u/GyanDaan-Project?page-id=0%3A1&node-id=21%3A111&starting-point-node-id=21%3A111&scaling=scale-down">View Demo</a></div>
+              <div class="view-demo"><a href="https://www.figma.com/proto/8SLmhQhKEmUG1gEKBptE3u/GyanDaan-Project?page-id=0%3A1&node-id=21%3A111&starting-point-node-id=21%3A111&scaling=scale-down" target="_blank">View Demo</a></div>
             </div>
           </div>
           <div class="project-card">
@@ -216,7 +216,7 @@
             <div class="card-overlay hidden"></div>
             <div class="hover-show-wrapper hidden">
               <div class="Project-stack">Design</div>
-              <div class="view-demo"><a href="https://www.figma.com/proto/OV8wBlCiFR8bnFy8RgiZnw/Untitled?page-id=0%3A1&node-id=17%3A0">View Demo</a></div>
+              <div class="view-demo"><a href="https://www.figma.com/proto/OV8wBlCiFR8bnFy8RgiZnw/Untitled?page-id=0%3A1&node-id=17%3A0" target="_blank">View Demo</a></div>
             </div>
           </div>
           <div class="project-card">
@@ -233,7 +233,7 @@
             <div class="card-overlay hidden"></div>
             <div class="hover-show-wrapper hidden">
               <div class="Project-stack">Javascript</div>
-              <div class="view-demo"><a href="https://mapty.netlify.app/">View Demo</a></div>
+              <div class="view-demo"><a href="https://mapty.netlify.app/" target="_blank">View Demo</a></div>
             </div>
           </div>
           <div class="project-card">
@@ -250,7 +250,7 @@
             <div class="card-overlay hidden"></div>
             <div class="hover-show-wrapper hidden">
               <div class="Project-stack">Design</div>
-              <div class="view-demo"><a href="https://www.figma.com/proto/DGMstxtkzYjIHdSkg4EmDB/Way-More?page-id=0%3A1&node-id=5%3A272&starting-point-node-id=5%3A272">View Demo</a></div>
+              <div class="view-demo"><a href="https://www.figma.com/proto/DGMstxtkzYjIHdSkg4EmDB/Way-More?page-id=0%3A1&node-id=5%3A272&starting-point-node-id=5%3A272" target="_blank">View Demo</a></div>
             </div>
           </div>
         </div>
