--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div><a class="nav-link link-active" href="#">Home</a></div>
           <div><a class="nav-link" href="./template/skills.html">Skills</a></div>
           <div><a class="nav-link" href="./template/projects.html">Projects</a></div>
-          <div><a class="nav-button" href="#">Contact Me</a></div>
+          <div><a class="nav-button" href="404">Contact Me</a></div>
         </div>
         <div class="hams"><img src="./static/icons/hams.svg" /></div>
         <div class="close"><img src="./static/icons/close.svg" /></div>
@@ -145,10 +145,10 @@
         <h2>My Projects</h2>
         <p>I have build build a few projects over designing and development shown below</p>
         <nav class="project-nav">
-          <div><a class="link-bar active-link-prj" href="#">All</a></div>
-          <div><a class="link-bar" href="#">Web Development</a></div>
-          <div><a class="link-bar" href="#">UI/UX Design</a></div>
-          <div><a class="link-bar" href="#">Others</a></div>
+          <div><a class="link-bar active-link-prj" href="/">All</a></div>
+          <div><a class="link-bar" href="404">Web Development</a></div>
+          <div><a class="link-bar" href="404">UI/UX Design</a></div>
+          <div><a class="link-bar" href="404">Others</a></div>
         </nav>
         <div class="project-container">
           <div class="project-card">
@@ -254,7 +254,7 @@
             </div>
           </div>
         </div>
-        <div class="see-more-projects"><a href="#">View More</a></div>
+        <div class="see-more-projects"><a href="404">View More</a></div>
       </section>
     </div>
     
