Minor Changes Done

--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
             <div class="container" style="--m: 4; --tan: 1">
               <div class="follow-me">Follow me on:</div>
               <div style="--i: 3" href="/facebook">
-                <a href="https://www.facebook.com/profile.php?id=100026666043078"><img src="./static/icons/facebook.svg" alt="Facebook" /></a>
+                <a target="_blank" href="https://www.facebook.com/profile.php?id=100026666043078"><img src="./static/icons/facebook.svg" alt="Facebook" /></a>
               </div>
               <div style="--i: 2" href="/instagram">
-                <a href="https://www.instagram.com/rakeshsoni6373/"><img src="./static/icons/instagram.svg" alt="instagram" /></a>
+                <a target="_blank" href="https://www.instagram.com/rakeshsoni6373/"><img src="./static/icons/instagram.svg" alt="instagram" /></a>
               </div>
               <div style="--i: 1" href="/linkedin">
-                <a href="https://www.linkedin.com/in/rakesh-soni-087b99200/"><img src="./static/icons/linkedIn.svg" alt="linkedin" /></a>
+                <a target="_blank" href="https://www.linkedin.com/in/rakesh-soni-087b99200/"><img src="./static/icons/linkedIn.svg" alt="linkedin" /></a>
               </div>
               <div style="--i: 4" href="/twitter">
-                <a href="https://twitter.com/RakeshS60960300"><img src="./static/icons/twitter.svg" alt="twitter" /></a>
+                <a target="_blank" href="https://twitter.com/RakeshS60960300"><img src="./static/icons/twitter.svg" alt="twitter" /></a>
               </div>
             </div>
             <div class="my-img">
